<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/registerback"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/loginheadback" >

        <RelativeLayout
            android:id="@+id/left_button"
            android:layout_width="70dp"
            android:layout_height="40dp" >

            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:src="@drawable/back" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/register_title2"
            android:textColor="#ffffff"
            android:textSize="20dp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="30dp" >

                <EditText
                    android:id="@+id/registercarname"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:lines="1"
                    android:singleLine="true"
					android:maxLength="20" 
                    android:background="@drawable/register_editback" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_toLeftOf="@id/registercarname"
                    android:text="@string/register_carname"
                    android:textColor="#000000"
                    android:textSize="15dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp" >

                <RelativeLayout
                    android:id="@+id/cartype_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_alignParentRight="true" >

                <TextView
                    android:id="@+id/registercarnum1"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:textSize="15dp"
                    android:hint="+品牌"
                    android:background="@drawable/registercarclass" />

                <TextView
                    android:id="@+id/registercarnum2"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/registercarnum1"
                    android:background="@drawable/registercarclass"
                    android:gravity="center"
                    android:hint="+车型"
                    android:textColor="#000000"
                    android:textSize="15dp" />

                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_toLeftOf="@id/cartype_mode"
                    android:text="@string/register_carnum"
                    android:textColor="#000000"
                    android:textSize="15dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp" >

                <TextView
                    android:id="@+id/registerscanshop"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/registerscanback"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:textSize="15dp" />

                <ImageView
                    android:id="@+id/registerscanshop_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/registerscanicon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_toLeftOf="@id/registerscanshop"
                    android:text="@string/register_scanshop"
                    android:textColor="#000000"
                    android:textSize="15dp" />
            </RelativeLayout>

            
            
        <!--     当前里程 -->
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp" >

                <EditText
                    android:id="@+id/registerman"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:lines="1"
                    android:maxLength="6"
					android:inputType="number"
                    android:background="@drawable/register_editback" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_toLeftOf="@id/registerman"
                    android:text="@string/register_man"
                    android:textColor="#000000"
                    android:textSize="15dp" />
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:text="km"/>
            </RelativeLayout>
            
            
            
            
            
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp" >

                <EditText
                    android:id="@+id/registernextmile"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:inputType="number"
                    android:maxLength="6"
                    android:lines="1"
                    android:background="@drawable/register_editback" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_toLeftOf="@id/registernextmile"
                    android:text="@string/register_nextmile"
                    android:textColor="#000000"
                    android:textSize="15dp" />
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:text="km"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp" >

                <TextView
                    android:id="@+id/registernexttime"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:paddingLeft="10dp"
                    android:gravity="center_vertical"
                    android:textColor="#000000"
                    android:textSize="15dp"
                    android:background="@drawable/register_editback" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_toLeftOf="@id/registernexttime"
                    android:text="@string/register_nexttime"
                    android:textColor="#000000"
                    android:textSize="15dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp" >

                <TextView
                    android:id="@+id/registernexttime2"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:paddingLeft="10dp"
                    android:gravity="center_vertical"
                    android:textColor="#000000"
                    android:textSize="15dp"
                    android:background="@drawable/register_editback" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_toLeftOf="@id/registernexttime2"
                    android:text="@string/register_nexttime2"
                    android:textColor="#000000"
                    android:textSize="15dp" />
            </RelativeLayout>

            
            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/registernext"
                android:gravity="center"
                android:text="@string/register_submit"
                android:textColor="#ffffff"
                android:textSize="20dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
